# Praktikum_PROG_C

./: CMakeLists.txt
documents/Bachmann_Stefan/Lab01/: CMakeLists.txt
documents/Bachmann_Stefan/Lab02/: 02StackFlowChart.xml
documents/Lab01/: Euklidscher Algorithmus zur Bestimmung des ggT.docx
documents/Lab01/Stefan_Bachmann_bachmste/: ggT.c
documents/Lab02/: 02StackFlowChart.xml  Lab02Stack.indd  define STACK.docx
documents/Lab02/Stefan_Bachmann_bachmste_Lab02/: CMakeLists.txt
documents/Lab03/: Lab03generics.indd  code.docx
documents/Lab03/Stefan_Bachmann_bachmste_Lab03/: CMakeLists.txt
documents/Lab04/: code.docx  lab04routingtable.indd
documents/Lab04/Stefan Bachmann_Lab04_RoutingTabelle/: routingTable.c
documents/Lab07/: code.docx  lab07palindrome.indd
src/: stack.c
src/Lab01_Type_ and_Structures/: ggT.c
src/Lab02_Stack/: stack.c  stackHeader.h
src/Lab03_generic_function/: genericprinter.c  genericprinter.h  genericprinterNOTWORKING.c  genericprinterNOTWORKING.h
src/Lab04_routing_table/: routingTable.c  routingTable.h
src/Lab07_palindrom/: palindrome.c  palindrome.h
src/Lab08_linked_list/: LinkedList.c  LinkedList.h
